--- a/questionansweringdfsapi.ipynb
+++ b/questionansweringdfsapi.ipynb
@@ -267,8 +267,9 @@
         "@app.post(\"/api\", tags=[\"prediction\"])\n",
         "async def get_predictions(qna: Qna):\n",
         "    try:\n",
-        "        question_texts = qna[\"question_texts\"]\n",
-        "        context_text = qna[\"context_text\"]\n",
+        "        question_texts = dict(qna)[\"question_texts\"]\n",
+        "        context_text = dict(qna)[\"context_text\"]\n",
+        "        print(question_texts,context_text)\n",
         "        import os\n",
         "        import torch\n",
         "        import time\n",
